syntax = "proto3";

option csharp_namespace = "NotificationService.Grpc";

package notification;

service NotificationGrpc {
  // Send notification to specific user
  rpc SendNotification (SendNotificationRequest) returns (SendNotificationResponse);
  
  // Send notification to topic (broadcast)
  rpc SendToTopic (SendToTopicRequest) returns (SendToTopicResponse);
}

message SendNotificationRequest {
  string user_id = 1;
  repeated string fcm_tokens = 2;
  string type = 3;
  string title = 4;
  string body = 5;
  string image_url = 6;
  map<string, string> data = 7;
  string deduplication_key = 8;
}

message SendNotificationResponse {
  bool success = 1;
  string message = 2;
}

message SendToTopicRequest {
  string topic = 1;
  string type = 2;
  string title = 3;
  string body = 4;
  string image_url = 5;
  map<string, string> data = 6;
}

message SendToTopicResponse {
  bool success = 1;
  string message = 2;
}
